# leptos_3385

./: Cargo.toml  README.md  rustfmt.toml  style.css
.cargo/: config.toml
src/: layout.rs  lib.rs  main.rs  page.rs
src/layout/: top_nav.rs
src/page/: home.rs  page_a.rs
